update logo to new officail logo

--- a/styles/style1.css
+++ b/styles/style1.css
@@ -1,5 +1,5 @@
 #home {
-  background-image: url("smoreslogo.jpeg");
+  background-image: url("smoreslogo.jpg");
   background-repeat: no-repeat;
   background-position: right top;
   background-attachment: fixed;
